Added more Spanish translations

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -7,6 +7,123 @@
 # Language: Spanish (es_ES)
 #
 
+# Main window
+
+main.menu.file=Archivo
+main.menu.file.new=Nuevo...
+main.menu.file.open=Abrir...
+main.menu.file.save=Guardar
+main.menu.file.save_as=Guardar Como...
+main.menu.file.exit=Salir De VocabHunter
+
+main.menu.words=Palabras
+main.menu.words.edit.on=Elegir Palabras
+main.menu.words.edit.off=Mostrar Elección
+main.menu.words.export=Exportar Elección...
+main.menu.words.find=Buscar
+
+main.menu.filters=Filtros
+main.menu.filters.setup=Preparar Filtros...
+main.menu.filters.enable=Habilitar Filtros
+
+main.menu.help=Ayuda
+main.menu.help.website=Página Web De VocabHunter
+main.menu.help.help=Como Usar VocabHunter
+main.menu.help.issue=Como Informar Sobre Un Bug
+main.menu.help.about=Acerca De VocabHunter
+
+main.button.new=Nuevo
+main.button.new.tip=Analizar un documento y empezar una sesión nueva
+main.button.open=Abrir
+main.button.open.tip=Abrir una sesión guardada
+main.button.save=Guardar
+main.button.save.tip=Guardar la sesión
+main.button.export=Exportar Elección
+main.button.export.tip=Exportar la lista de palabras marcadas como desconocidas a un fichero
+main.button.filters.setup=Preparar Filtros
+main.button.filters.setup.tip=Definir los filtros que se usan para ocultar palabras
+main.button.filters.enable=Habilitar Los Filtros
+main.button.filters.enable.tip=Ocultar palabras usando los filtros
+main.button.filters.edit.on=Elegir Palabras
+main.button.filters.edit.on.tip=Marcar palabras como conocidas y desconocidas
+main.button.filters.edit.off=Mostrar Eleción
+main.button.filters.edit.off.tip=Mostrar una lista de las palabras marcadas como desconocidas
+main.session.new=Usa 'Nuevo' para analizar un documento y empezar una nueva sesión.
+main.session.open=Usa 'Abrir' para cargar una sesión guardada.
+
+main.window.unsaved=Cambios Sin Guardar
+main.window.untitled=Sin Título
+
 # Session
 
+session.button.unknown=Desconocida
+session.button.unknown.tip=No conozco esta palabra (teclea x)
+session.button.known=Conocida
+session.button.known.tip=Conozco esta palabra (teclea k)
+session.button.unseen.tip=Reiniciar palabra (teclea r)
+session.button.note.tip=Añadir un comentario a esta palabra (teclea n)
+
+session.word.uses=({0} {0,choice,0#usos|1#uso|1<usos})
+
 session.tab.analysis=Analysis De Texto
+session.tab.progress=Informe De Progreso
+
+# Search bar
+
+search.match.none=Sin resultados
+search.match.selection.on={0} de {1} {1,choice,0#resultados|1#resultado|1<resultados}
+search.match.selection.off={0} {0,choice,0#resultados|1#resultado|1<resultados}
+
+# Filters: Main Dialogue
+
+filter.main.title=Elegir las palabras que quieres mostrar
+filter.main.button.ok=Habilitar Filtros
+filter.main.button.cancel=Cancelar
+filter.main.prompt.minimum.letters=Cantidad mínima de letras en una palabra:
+filter.main.prompt.minimum.occurrences=Cantidad mínima de usos de una palabra:
+filter.main.prompt.capitals=Incluir palabras que empiecen con letra mayuscula:
+filter.main.lists.title=Listas de palabras para excluir:
+filter.main.lists.button.grid.tip=Añadir un documento de texto o una hoja de calculos con palabras para excluir
+filter.main.lists.button.session.tip=Añadir un fichero con una sesión guardada de VocabHunter con palabras para excluir
+filter.main.lists.empty.title=Usa los botones arriba para añadir listas de palabras para excluir:
+filter.main.lists.empty.grid=Añadir un documento de texto o una hoja de calculos con palabras para excluir
+filter.main.lists.empty.session=Añadir un fichero con una sesión guardada de VocabHunter con palabras para excluir
+filter.main.lists.button.edit=Mostrar o editar el fichero de filtros
+filter.main.lists.button.delete=Quitar el fichero de filtros
+
+# Filters (General)
+
+filter.window.title=Ajustes De Filtros De Palabras
+filter.words.count={0,choice,0#Error: Ninguna palabra elegida|0<Cantidad de palabras: {0}}
+filter.column=Columna {0}
+filter.error.title=Error De Filtro
+filter.error.all=Los filtros elegidos ocultarían todas las palabras.
+filter.error.disabled=Se han deshabilitado los filtros.
+
+# Filters: Grid (text document or spreadsheet)
+
+filter.grid.window.title=Filtrar Con Un Fichero De Palabras
+filter.grid.title=Elige las palabras para filtrar
+filter.grid.button.ok=Añadir Filtro
+filter.grid.button.cancel=Cancelar
+filter.grid.file.prompt=Fichero De Palabras: 
+filter.grid.file.button.change=Cambiar fichero...
+filter.grid.error.empty=El fichero no contiene ninguna palabra
+filter.grid.columns.prompt=Elige las columnas para incluir: 
+
+# Filters: Session
+
+filter.session.window.title=Filtrar Con Un Fichero De Una Sesión De VocabHunter
+filter.session.title=Elige las palabras para filtrar
+filter.session.button.ok=Añadir Filtro
+filter.session.button.cancel=Cancelar
+filter.session.file.prompt=Fichero de sesión: 
+filter.session.file.button.change=Cambiar fichero...
+filter.session.error.empty=El fichero no contiene ninguna palabra marcada como conocida o desconocida
+filter.session.column.type=Conocida / Desconocida
+filter.session.column.word=Palabra
+filter.session.mode.prompt=Elige las palabras para filtrar:
+filter.session.mode.known=Palabras conocidas
+filter.session.mode.both=Palabras conocidas y desconocidas
+filter.session.type.known.tip=Palabra marcada como conocida
+filter.session.type.unknown.tip=Palabra marcada como desconocida
