Added I18N support for filter list names

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -90,6 +90,9 @@ filter.main.lists.empty.grid=Añadir un documento de texto o una hoja de calculo
 filter.main.lists.empty.session=Añadir un fichero con una sesión guardada de VocabHunter con palabras para excluir
 filter.main.lists.button.edit=Mostrar o editar el fichero de filtros
 filter.main.lists.button.delete=Quitar el fichero de filtros
+filter.main.lists.type.known=Palabras conocidas
+filter.main.lists.type.both=Palabras conocidas y desconocidas
+filter.main.lists.type.list=Lista de palabras
 
 # Filters (General)
 
