Added the Spanish translations for the progress tab

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -130,3 +130,21 @@ filter.session.mode.known=Palabras conocidas
 filter.session.mode.both=Palabras conocidas y desconocidas
 filter.session.type.known.tip=Palabra marcada como conocida
 filter.session.type.unknown.tip=Palabra marcada como desconocida
+
+# Progress
+
+progress.progress.chart=Progreso
+progress.progress.marked=Conocidas o Desconocidas
+progress.progress.unmarked=Sin Marcar
+progress.results.chart=Resultados
+progress.results.known=Conocidas
+progress.results.unknown=Desconocidas
+progress.results.unmarked=Sin Marcar
+progress.results.filtered=Filtradas
+progress.slice.marked=Conocidas o\nDesconocidas
+progress.slice.unmarked=Sin Marcar
+progress.slice.known=Conocidas
+progress.slice.unknown=Desconocidas
+progress.slice.filtered=Filtradas
+progress.word.count={0} {0,choice,0#Palabras|1#Palabra|1<Palabras}
+progress.word.percentage={0,number,#}%
