Added more Spanish translations

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -48,6 +48,7 @@ main.button.filters.edit.on=Elegir Palabras
 main.button.filters.edit.on.tip=Marcar palabras como conocidas y desconocidas
 main.button.filters.edit.off=Mostrar Eleción
 main.button.filters.edit.off.tip=Mostrar una lista de las palabras marcadas como desconocidas
+
 main.session.new=Usa 'Nuevo' para analizar un documento y empezar una nueva sesión.
 main.session.open=Usa 'Abrir' para cargar una sesión guardada.
 
@@ -148,3 +149,61 @@ progress.slice.unknown=Desconocidas
 progress.slice.filtered=Filtradas
 progress.word.count={0} {0,choice,0#Palabras|1#Palabra|1<Palabras}
 progress.word.percentage={0,number,#}%
+
+# Word Note
+
+note.window.title=Comentario Sobre Una Palabra
+note.title=Comentario sobre palabra: {0}
+note.button.ok=Añadir Comentario
+note.button.cancel=Cancelar
+
+# About dialogue
+
+about.licence=VocabHunter es software de código abierto,\npublicado bajo la versión 2.0 de la licencia de Apache.
+about.version=Versión De VocabHunter: {0}.
+about.copyright=Copyright (c) 2015 - 2019 Adam Carroll.
+about.github=Si te gusta VocabHunter, dale una estrellita en GitHub.
+about.close=Cerrar
+
+# Error dialogues
+
+error.details=Detalles del error:
+error.session.open.details=No se ha podido abrir el fichero ''{0}''
+error.session.open.title=Error Al Abrir Fichero
+error.session.save.details=No se ha podido guardar el fichero ''{0}''
+error.session.save.title=Error Al Guardar Sesión
+error.session.export.details=No se ha podido exportar la sesión al fichero ''{0}''
+error.session.export.title=Error Al Exportar La Sesión
+
+# File dialogues
+
+file.new=Elige Un Fichero Para Analizar
+file.open=Abrir
+file.save=Guardar
+file.export=Exportar La Selección
+file.exclude=Abrir una lista de palabras para excluir
+
+file.type.all=Todos Los Ficheros
+file.type.text=Ficheros De Texto
+file.type.document=Documentos
+file.type.any_text=Ficheros De Texto
+file.type.pdf=Ficheros PDF
+file.type.office=Documentos De Software De Oficina
+file.type.ebook=Libros Electrónicos
+file.type.session=Ficheros De Sesiones De VocabHunter
+file.type.spreadsheet=Hojas De Cálculos
+
+file.modified=''{0}'' se ha modificado.  ¿Quieres guardar los cambios?
+file.unsaved=Cambios Sin Guardar
+
+# Status manager
+
+status.action.new=Empezar una nueva sesión de VocabHunter
+status.action.open=Abrir una sesión guardada de VocabHunter
+status.action.save=Guardar la sesión de VocabHunter
+status.action.export=Exportar las palabras marcadas como desconocidas
+status.action.exit=Salir De VocabHunter
+status.action.about=Acerca De VocabHunter
+status.marked.percentage={0,number,#}% de las palabras marcadas
+status.position.edit.on=Palabra {0} de {1} {1,choice,0#palabras|1#palabra|1<palabras}{2,choice,0#|1# ({2} palabra ocultada por los filtros)|1< ({2} palabras ocultadas por los filtros)}
+status.position.edit.off=Palabra {0} de {1} {1,choice,0#palabras marcadas como desconocidas|1#palabra marcada como desconocida|1<palabras marcadas como desconocidas}
