Added I18N support for unsaved changes dialogue buttons

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -196,6 +196,10 @@ file.type.spreadsheet=Hojas De Cálculos
 file.modified=''{0}'' se ha modificado.  ¿Quieres guardar los cambios?
 file.unsaved=Cambios Sin Guardar
 
+file.button.save=Guardar
+file.button.discard=Descartar
+file.button.cancel=Cancelar
+
 # Status manager
 
 status.action.new=Empezar una nueva sesión de VocabHunter
