Added menu items for changing the language

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -22,9 +22,11 @@ main.menu.words.edit.off=Mostrar Elección
 main.menu.words.export=Exportar Elección...
 main.menu.words.find=Buscar
 
-main.menu.filters=Filtros
-main.menu.filters.setup=Preparar Filtros...
-main.menu.filters.enable=Habilitar Filtros
+main.menu.settings=Ajustes
+main.menu.settings.filters.setup=Preparar Filtros...
+main.menu.settings.filters.enable=Habilitar Filtros
+main.menu.language.english=Inglés
+main.menu.language.spanish=Español
 
 main.menu.help=Ayuda
 main.menu.help.website=Página Web De VocabHunter
