Moved language selection to a sub-menu

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -25,6 +25,7 @@ main.menu.words.find=Buscar
 main.menu.settings=Ajustes
 main.menu.settings.filters.setup=Preparar Filtros...
 main.menu.settings.filters.enable=Habilitar Filtros
+main.menu.language.menu=Idioma
 main.menu.language.english=Inglés
 main.menu.language.spanish=Español
 
