--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -23,7 +23,7 @@ main.menu.words.export=Exportar Elección...
 main.menu.words.find=Buscar
 
 main.menu.settings=Ajustes
-main.menu.settings.filters.setup=Preparar Filtros...
+main.menu.settings.filters.setup=Configurar Filtros...
 main.menu.settings.filters.enable=Habilitar Filtros
 main.menu.language.menu=Idioma
 main.menu.language.english=Inglés
@@ -43,17 +43,16 @@ main.button.save=Guardar
 main.button.save.tip=Guardar la sesión
 main.button.export=Exportar Elección
 main.button.export.tip=Exportar la lista de palabras marcadas como desconocidas a un fichero
-main.button.filters.setup=Preparar Filtros
+main.button.filters.setup=Configurar Filtros
 main.button.filters.setup.tip=Definir los filtros que se usan para ocultar palabras
-main.button.filters.enable=Habilitar Los Filtros
+main.button.filters.enable=Habilitar Filtros
 main.button.filters.enable.tip=Ocultar palabras usando los filtros
 main.button.filters.edit.on=Elegir Palabras
 main.button.filters.edit.on.tip=Marcar palabras como conocidas y desconocidas
 main.button.filters.edit.off=Mostrar Eleción
 main.button.filters.edit.off.tip=Mostrar una lista de las palabras marcadas como desconocidas
-
-main.session.new=Usa 'Nuevo' para analizar un documento y empezar una nueva sesión.
-main.session.open=Usa 'Abrir' para cargar una sesión guardada.
+main.session.new=Elige 'Nuevo' para analizar un documento y empezar una nueva sesión.
+main.session.open=Elige 'Abrir' para cargar una sesión guardada.
 
 main.window.unsaved=Cambios Sin Guardar
 main.window.untitled=Sin Título
@@ -85,13 +84,13 @@ filter.main.button.ok=Habilitar Filtros
 filter.main.button.cancel=Cancelar
 filter.main.prompt.minimum.letters=Cantidad mínima de letras en una palabra:
 filter.main.prompt.minimum.occurrences=Cantidad mínima de usos de una palabra:
-filter.main.prompt.capitals=Incluir palabras que empiecen con letra mayuscula:
-filter.main.lists.title=Listas de palabras para excluir:
-filter.main.lists.button.grid.tip=Añadir un documento de texto o una hoja de calculos con palabras para excluir
-filter.main.lists.button.session.tip=Añadir un fichero con una sesión guardada de VocabHunter con palabras para excluir
-filter.main.lists.empty.title=Usa los botones arriba para añadir listas de palabras para excluir:
-filter.main.lists.empty.grid=Añadir un documento de texto o una hoja de calculos con palabras para excluir
-filter.main.lists.empty.session=Añadir un fichero con una sesión guardada de VocabHunter con palabras para excluir
+filter.main.prompt.capitals=Incluir palabras que empiecen con letra mayúscula:
+filter.main.lists.title=Listas de palabras a excluir:
+filter.main.lists.button.grid.tip=Añadir un documento de texto o una hoja de calculos con palabras a excluir
+filter.main.lists.button.session.tip=Añadir un fichero con una sesión guardada de VocabHunter con palabras a excluir
+filter.main.lists.empty.title=Usa los botones arriba para añadir listas de palabras a excluir:
+filter.main.lists.empty.grid=Añadir un documento de texto o una hoja de calculos con palabras a excluir
+filter.main.lists.empty.session=Añadir un fichero con una sesión guardada de VocabHunter con palabras a excluir
 filter.main.lists.button.edit=Mostrar o editar el fichero de filtros
 filter.main.lists.button.delete=Quitar el fichero de filtros
 filter.main.lists.type.known=Palabras conocidas
@@ -101,7 +100,7 @@ filter.main.lists.type.list=Lista de palabras
 # Filters (General)
 
 filter.window.title=Ajustes De Filtros De Palabras
-filter.words.count={0,choice,0#Error: Ninguna palabra elegida|0<Cantidad de palabras: {0}}
+filter.words.count={0,choice,0#Error: Ninguna palabra elegida|0<Total de palabras: {0}}
 filter.column=Columna {0}
 filter.error.title=Error De Filtro
 filter.error.all=Los filtros elegidos ocultarían todas las palabras.
@@ -110,18 +109,18 @@ filter.error.disabled=Se han deshabilitado los filtros.
 # Filters: Grid (text document or spreadsheet)
 
 filter.grid.window.title=Filtrar Con Un Fichero De Palabras
-filter.grid.title=Elige las palabras para filtrar
+filter.grid.title=Elige las palabras a filtrar
 filter.grid.button.ok=Añadir Filtro
 filter.grid.button.cancel=Cancelar
 filter.grid.file.prompt=Fichero De Palabras: 
 filter.grid.file.button.change=Cambiar fichero...
 filter.grid.error.empty=El fichero no contiene ninguna palabra
-filter.grid.columns.prompt=Elige las columnas para incluir: 
+filter.grid.columns.prompt=Elige las columnas a incluir: 
 
 # Filters: Session
 
 filter.session.window.title=Filtrar Con Un Fichero De Una Sesión De VocabHunter
-filter.session.title=Elige las palabras para filtrar
+filter.session.title=Elige las palabras a filtrar
 filter.session.button.ok=Añadir Filtro
 filter.session.button.cancel=Cancelar
 filter.session.file.prompt=Fichero de sesión: 
@@ -129,7 +128,7 @@ filter.session.file.button.change=Cambiar fichero...
 filter.session.error.empty=El fichero no contiene ninguna palabra marcada como conocida o desconocida
 filter.session.column.type=Conocida / Desconocida
 filter.session.column.word=Palabra
-filter.session.mode.prompt=Elige las palabras para filtrar:
+filter.session.mode.prompt=Elige las palabras a filtrar:
 filter.session.mode.known=Palabras conocidas
 filter.session.mode.both=Palabras conocidas y desconocidas
 filter.session.type.known.tip=Palabra marcada como conocida
@@ -184,7 +183,7 @@ file.new=Elige Un Fichero Para Analizar
 file.open=Abrir
 file.save=Guardar
 file.export=Exportar La Selección
-file.exclude=Abrir una lista de palabras para excluir
+file.exclude=Abrir una lista de palabras a excluir
 
 file.type.all=Todos Los Ficheros
 file.type.text=Ficheros De Texto
