Simplified word count information shown in the status bar

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -211,5 +211,5 @@ status.action.export=Exportar las palabras marcadas como desconocidas
 status.action.exit=Salir De VocabHunter
 status.action.about=Acerca De VocabHunter
 status.marked.percentage={0,number,#}% de las palabras marcadas
-status.position.edit.on=Palabra {0} de {1} {1,choice,0#palabras|1#palabra|1<palabras}{2,choice,0#|1# ({2} palabra ocultada por los filtros)|1< ({2} palabras ocultadas por los filtros)}
-status.position.edit.off=Palabra {0} de {1} {1,choice,0#palabras marcadas como desconocidas|1#palabra marcada como desconocida|1<palabras marcadas como desconocidas}
+status.position.edit.on=Palabra {0} de {1}{2,choice,0#|1# ({2} palabra ocultada por los filtros)|1< ({2} palabras ocultadas por los filtros)}
+status.position.edit.off=Palabra {0} de {1} {1,choice,0#marcadas como desconocidas|1#marcada como desconocida|1<marcadas como desconocidas}
