Corrected some of the Spanish translation

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -18,8 +18,8 @@ main.menu.file.exit=Salir De VocabHunter
 
 main.menu.words=Palabras
 main.menu.words.edit.on=Elegir Palabras
-main.menu.words.edit.off=Mostrar Elección
-main.menu.words.export=Exportar Elección...
+main.menu.words.edit.off=Mostrar Selección De Palabras
+main.menu.words.export=Exportar Selección...
 main.menu.words.find=Buscar
 
 main.menu.settings=Ajustes
@@ -41,7 +41,7 @@ main.button.open=Abrir
 main.button.open.tip=Abrir una sesión guardada
 main.button.save=Guardar
 main.button.save.tip=Guardar la sesión
-main.button.export=Exportar Elección
+main.button.export=Exportar Selección
 main.button.export.tip=Exportar la lista de palabras marcadas como desconocidas a un fichero
 main.button.filters.setup=Configurar Filtros
 main.button.filters.setup.tip=Definir los filtros que se usan para ocultar palabras
@@ -49,7 +49,7 @@ main.button.filters.enable=Habilitar Filtros
 main.button.filters.enable.tip=Ocultar palabras usando los filtros
 main.button.filters.edit.on=Elegir Palabras
 main.button.filters.edit.on.tip=Marcar palabras como conocidas y desconocidas
-main.button.filters.edit.off=Mostrar Eleción
+main.button.filters.edit.off=Mostrar Selección
 main.button.filters.edit.off.tip=Mostrar una lista de las palabras marcadas como desconocidas
 main.session.new=Elige 'Nuevo' para analizar un documento y empezar una nueva sesión.
 main.session.open=Elige 'Abrir' para cargar una sesión guardada.
@@ -68,7 +68,7 @@ session.button.note.tip=Añadir un comentario a esta palabra (teclea n)
 
 session.word.uses=({0} {0,choice,0#usos|1#uso|1<usos})
 
-session.tab.analysis=Analysis De Texto
+session.tab.analysis=Análisis De Texto
 session.tab.progress=Informe De Progreso
 
 # Search bar
