Added export including notes

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -19,7 +19,8 @@ main.menu.file.exit=Salir De VocabHunter
 main.menu.words=Palabras
 main.menu.words.edit.on=Elegir Palabras
 main.menu.words.edit.off=Mostrar Selección De Palabras
-main.menu.words.export=Exportar Selección...
+main.menu.words.export.notes.on=Exportar Selección...
+main.menu.words.export.notes.off=Exportar Selección Sin Los Comentarios...
 main.menu.words.find=Buscar
 
 main.menu.settings=Ajustes
