Fixed problem with Spanish translation not fitting into space

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -127,7 +127,7 @@ filter.session.button.cancel=Cancelar
 filter.session.file.prompt=Fichero de sesión: 
 filter.session.file.button.change=Cambiar fichero...
 filter.session.error.empty=El fichero no contiene ninguna palabra marcada como conocida o desconocida
-filter.session.column.type=Conocida / Desconocida
+filter.session.column.type=¿Palabra Conocida?
 filter.session.column.word=Palabra
 filter.session.mode.prompt=Elige las palabras a filtrar:
 filter.session.mode.known=Palabras conocidas
