--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -214,3 +214,8 @@ status.action.about=Acerca De VocabHunter
 status.marked.percentage={0,number,#}% de las palabras marcadas
 status.position.edit.on=Palabra {0} de {1}{2,choice,0#|1# ({2} palabra ocultada por los filtros)|1< ({2} palabras ocultadas por los filtros)}
 status.position.edit.off=Palabra {0} de {1} {1,choice,0#marcadas como desconocidas|1#marcada como desconocida|1<marcadas como desconocidas}
+
+# Language selection dialogue
+
+language.name=Español
+language.title=Elige Tu Idioma
