--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -26,9 +26,7 @@ main.menu.words.find=Buscar
 main.menu.settings=Ajustes
 main.menu.settings.filters.setup=Configurar Filtros...
 main.menu.settings.filters.enable=Habilitar Filtros
-main.menu.language.menu=Idioma
-main.menu.language.english=Inglés
-main.menu.language.spanish=Español
+main.menu.settings.language=Cambiar idioma...
 
 main.menu.help=Ayuda
 main.menu.help.website=Página Web De VocabHunter
