--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -124,7 +124,7 @@ filter.session.button.ok=Añadir Filtro
 filter.session.button.cancel=Cancelar
 filter.session.file.prompt=Fichero de sesión: 
 filter.session.file.button.change=Cambiar fichero...
-filter.session.error.empty=El fichero no contiene ninguna palabra marcada como conocida o desconocida
+filter.session.error.empty=El fichero no contiene ninguna palabra\nmarcada como conocida o desconocida
 filter.session.column.type=¿Palabra Conocida?
 filter.session.column.word=Palabra
 filter.session.mode.prompt=Elige las palabras a filtrar:
