Improved the Spanish translation

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -65,7 +65,7 @@ session.button.known.tip=Conozco esta palabra (teclea k)
 session.button.unseen.tip=Reiniciar palabra (teclea r)
 session.button.note.tip=Añadir un comentario a esta palabra (teclea n)
 
-session.word.uses=({0} {0,choice,0#usos|1#uso|1<usos})
+session.word.uses=({0} {0,choice,0#repeticiones|1#uso|1<repeticiones})
 
 session.tab.analysis=Análisis De Texto
 session.tab.progress=Informe De Progreso
@@ -78,20 +78,20 @@ search.match.selection.off={0} {0,choice,0#resultados|1#resultado|1<resultados}
 
 # Filters: Main Dialogue
 
-filter.main.title=Elegir las palabras que quieres mostrar
+filter.main.title=Elegir las palabras (del documento) que quieres analizar
 filter.main.button.ok=Habilitar Filtros
 filter.main.button.cancel=Cancelar
-filter.main.prompt.minimum.letters=Cantidad mínima de letras en una palabra:
-filter.main.prompt.minimum.occurrences=Cantidad mínima de usos de una palabra:
-filter.main.prompt.capitals=Incluir palabras que empiecen con letra mayúscula:
+filter.main.prompt.minimum.letters=Longitud (número de letras) mínima de palabra:
+filter.main.prompt.minimum.occurrences=Número mínimo de repeticiones de una palabra:
+filter.main.prompt.capitals=Incluir palabras que empiecen en mayúscula:
 filter.main.lists.title=Listas de palabras a excluir:
-filter.main.lists.button.grid.tip=Añadir un documento de texto o una hoja de calculos con palabras a excluir
+filter.main.lists.button.grid.tip=Añadir un documento de texto o una hoja de cálculo con palabras a excluir
 filter.main.lists.button.session.tip=Añadir un fichero con una sesión guardada de VocabHunter con palabras a excluir
 filter.main.lists.empty.title=Usa los botones arriba para añadir listas de palabras a excluir:
-filter.main.lists.empty.grid=Añadir un documento de texto o una hoja de calculos con palabras a excluir
+filter.main.lists.empty.grid=Añadir un documento de texto o una hoja de cálculo con palabras a excluir
 filter.main.lists.empty.session=Añadir un fichero con una sesión guardada de VocabHunter con palabras a excluir
-filter.main.lists.button.edit=Mostrar o editar el fichero de filtros
-filter.main.lists.button.delete=Quitar el fichero de filtros
+filter.main.lists.button.edit=Mostrar o editar los filtros
+filter.main.lists.button.delete=Quitar los filtros
 filter.main.lists.type.known=Palabras conocidas
 filter.main.lists.type.both=Palabras conocidas y desconocidas
 filter.main.lists.type.list=Lista de palabras
@@ -160,7 +160,7 @@ note.button.cancel=Cancelar
 
 # About dialogue
 
-about.licence=VocabHunter es software de código abierto,\npublicado bajo la versión 2.0 de la licencia de Apache.
+about.licence=VocabHunter es un software de código abierto,\npublicado bajo la versión 2.0 de la licencia de Apache.
 about.version=Versión De VocabHunter: {0}.
 about.copyright=Copyright (c) 2015 - 2019 Adam Carroll.
 about.github=Si te gusta VocabHunter, dale una estrellita en GitHub.
@@ -189,10 +189,10 @@ file.type.text=Ficheros De Texto
 file.type.document=Documentos
 file.type.any_text=Ficheros De Texto
 file.type.pdf=Ficheros PDF
-file.type.office=Documentos De Software De Oficina
+file.type.office=Documentos de MS Office, OpenOffice etc.
 file.type.ebook=Libros Electrónicos
-file.type.session=Ficheros De Sesiones De VocabHunter
-file.type.spreadsheet=Hojas De Cálculos
+file.type.session=Ficheros de Sesiones De VocabHunter
+file.type.spreadsheet=Hojas De Cálculo
 
 file.modified=''{0}'' se ha modificado.  ¿Quieres guardar los cambios?
 file.unsaved=Cambios Sin Guardar
