Added links to Spanish-language version of website

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -217,3 +217,9 @@ status.position.edit.off=Palabra {0} de {1} {1,choice,0#marcadas como desconocid
 
 language.name=Español
 language.title=Elige Tu Idioma
+
+# Links
+
+link.main=https://vocabhunter.github.io/es/
+link.help=https://vocabhunter.github.io/es/help/
+link.issue=https://vocabhunter.github.io/es/issues/
