Added feature to copy current word

--- a/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
+++ b/gui/src/main/resources/bundles/VocabHunterBundle_es.properties
@@ -21,6 +21,7 @@ main.menu.words.edit.on=Elegir Palabras
 main.menu.words.edit.off=Mostrar Selección De Palabras
 main.menu.words.export.notes.on=Exportar Selección...
 main.menu.words.export.notes.off=Exportar Selección Sin Los Comentarios...
+main.menu.words.copy=Copiar Palabra
 main.menu.words.find=Buscar
 
 main.menu.settings=Ajustes
